# ViT-for-IQA

./: .gitattributes  .gitignore  Changes.txt  README.md  pyproject.toml
configs/: dataset_kadid10k.yaml  dataset_live.yaml  dataset_tid2008.yaml  dataset_tid2013.yaml  model_vit_base_patch16_224.yaml  train_kadid10k_baseline.yaml  train_kadid10k_vit_base_patch16_224_baseline.yaml  train_live_baseline.yaml  train_live_vit_base_patch16_224_baseline.yaml  train_tid2008_baseline.yaml  train_tid2008_vit_base_patch16_224_baseline.yaml  train_tid2013_baseline.yaml  train_tid2013_vit_base_patch16_224_baseline.yaml  training_kadid10k_vit_base_patch16_224_baseline.yaml  training_live_vit_base_patch16_224_baseline.yaml  training_tid2008_vit_base_patch16_224_baseline.yaml  training_tid2013_vit_base_patch16_224_baseline.yaml
scripts/: create_experiment.py  download_datasets.py  run_evaluation.py  run_prediction.py  run_training.py
src/cli/: arguments.py  base_cli_command.py  create_experiment_cli.py  entrypoint.py  run_evaluation_cli.py  run_prediction_cli.py  run_training_cli.py  validators.py
src/configs/: dataset_config.py  loader.py  model_config.py  training_config.py  validators.py
src/datasets/: base_dataset.py  dataset_map.py  factory.py  file_map.py  kadid10k_dataset.py  kadid_dataset.py  live_dataset.py  splits.py  tid2008_dataset.py  tid2013_dataset.py  tid_dataset.py
src/evaluation/: correlation_metrics.py  evaluator.py
src/experiments/: experiments.py
src/inference/: predictor.py
src/models/: model_map.py  vit_regressor.py
src/training/: trainer.py  (+1 more)
(+11 files in other folders)
